--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,8 +30,8 @@ nav {
     margin-top: 50px;
     text-align: center;
     flex-wrap: wrap;
-    margin-left: 400px;
-    margin-right: 400px;
+    margin-left: 20%;
+    margin-right: 20%;
 }
 
 #startBtn {
