--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 :root { 
     --purple: rgb(126, 27, 192);
     --black: rgb(17, 17, 17);
+    --red: rgb(180, 26, 26);
 }
 
 body{
@@ -8,10 +9,23 @@ body{
 }
 
 nav {
-    display: inline-block;
+    position: relative;
+    width: 100%;
+    height: 30px;
+    font-size: 130%;
 }
+
+#scoreBtn {
+    text-decoration: none;
+    color: var(--red);
+}
+
 #timer {
-    text-align: right;
+    position: absolute;
+    top: 0px;
+    right: 5px;
+    color: var(--red);
+    
 }
 
 #main {
