--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,3 +51,14 @@ nav {
 #startBtn {
     margin-top: 40px;
 }
+
+#answers li {
+    display: block;
+    text-align: center;
+    color: aliceblue;
+    background-color: var(--purple);
+    max-width: 300px;
+    margin-top: 10px;
+    margin-left: 30%;
+    border-radius: 8px;
+}
