Adding a bunch of final fixes to make sure it all works

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,3 +62,9 @@ nav {
     margin-left: 40%;
     border-radius: 8px;
 }
+
+.marker {
+    color: var(--red);
+    text-decoration: underline var(--red);
+    font-style: italic;
+}
